--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 flask
 flask-cors
-firebase-admin
 numpy
 pandas
-scikit-learn
-nltk
-transformers
 torch
 joblib
 gunicorn
 requests
+google_generativeai
+gtts
+npm
+
+
+
+
